--- a/brown_pcl/package.xml
+++ b/brown_pcl/package.xml
@@ -2,7 +2,7 @@
 <package>
   <name>brown_pcl</name>
   <version>0.0.0</version>
-  <description>The bt_pc_segmentation package</description>
+  <description>The brown_pcl related package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag --> 
   <!-- Example:  -->
@@ -40,17 +40,11 @@
   <!-- Use test_depend for packages you need only for testing: -->
   <!--   <test_depend>gtest</test_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
-  <!-- <build_depend>pcl_ros</build_depend> -->
-  <build_depend>pcl_conversions</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>sensor_msgs</build_depend>
-  <!-- <build_depend>libpcl-all-dev</build_depend> -->
   <build_depend>cv_bridge</build_depend>
   <build_depend>opencv2</build_depend>
 
-  <!-- <run_depend>libpcl-all</run_depend> -->
-  <!-- <run_depend>pcl_ros</run_depend> -->
-  <run_depend>pcl_conversions</run_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>sensor_msgs</run_depend>
   <run_depend>cv_bridge</run_depend>
